[#7388] Fixed Chat Bar Overlapping Issue in forum page

--- a/public/src/page/community/_community_sidebar.scss
+++ b/public/src/page/community/_community_sidebar.scss
@@ -56,7 +56,7 @@ $sidebar-width: 284px;
 .community-sidebar{
 	@include transition(left 0.2s ease-in, opacity 0.2s ease-in);
 	position: absolute;
-	z-index: 1000;
+	z-index: 2;
 	padding: 10px 0 10px;
 	top:0;
 	width: $sidebar-width;
